# orca

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Package.swift  README.md  gcovr.cfg  normalizer.cmake  peer-module.cmake  setup.cmake
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml
.github/workflows/: android-appcenter.yml  android-browserstack.yml  android-demos.yml  android-devicefarm.yml  android-perf.yml  android-upload.yml  c-codestyle.yml  c-demos.yml  dotnet-codestyle.yml  dotnet-demos.yml  dotnet.yml  ios-appcenter.yml  ios-browserstack.yml  ios-demos.yml  ios-devicefarm.yml  ios-perf.yml  ios-validate.yml  link-check.yml  nodejs-codestyle.yml  nodejs-demos.yml  nodejs-perf.yml  nodejs.yml  python-demo.yml  python-perf.yml  python.yml  spell-check.yml  swift-codestyle.yml  web-codestyle.yml  web-demos.yml  web-perf.yml  web.yml
app/: pv_orca_app.c  pv_orca_input_output_streaming_app.c  pv_orca_metric_serializer.c  pv_orca_serializer.c  pv_orca_synthesizer_bench.c
app/normalizer/: pv_normalizer_app.c  pv_normalizer_cases_app.c  pv_normalizer_tokenizer_app.c
binding/android/: README.md
binding/dotnet/: .gitignore  Orca.sln  README.md
binding/ios/: Orca-iOS.podspec  Orca.swift  OrcaErrors.swift  README.md
binding/nodejs/: .prettierignore  README.md  copy.js  package.json
binding/python/: .gitignore  README.md  __init__.py  _factory.py  _orca.py  _util.py  requirements.txt  setup.py  test_orca.py  test_orca_perf.py  test_util.py
binding/web/: .gitignore  README.md  cypress.config.ts  package.json
cmake/: languages.cmake  speakers.cmake
demo/c/: .gitignore  CMakeLists.txt  README.md  orca_demo.c  orca_demo_streaming.c
demo/c/test/: test_orca_c.py  test_util.py
demo/c/utils/: model_path.c  model_path.h
demo/dotnet/: .gitignore  OrcaDemo.sln  README.md
demo/ios/: README.md
demo/llm/: orca_voice_assistant_demo.py  requirements.txt  streaming_orca_demo.py
demo/llm_voice_assistant/: README.md  llm_voice_assistant_demo.py  requirements.txt
demo/nodejs/: README.md  file.js  package.json  streaming.js  utils.js
demo/python/: .gitignore  README.md  __init__.py  _audio_device.py  _orca_thread.py  _util.py  demo_util.py  orca_demo.py  orca_demo_streaming.py  requirements.txt  setup.py  streaming_orca_demo.py
demo/voice_assistant/: README.md  generate_sentences.py  orca_voice_assistant_demo.py
demo/web/: .gitignore  README.md  eslint.config.mjs  index.html  package.json
gitlab-ci/: stage-build-test-beta.yml  stage-build-test-prod.yml  stage-collect-artifacts.yml  stage-util.yml  utils.yml
include/: picovoice.h  pv_orca.h
include/orca/: pv_adanorm.h  pv_additive_coupling.h  pv_affine.h  pv_attention.h  pv_buffer.h  pv_buffer_int32.h  pv_buffer_q510.h  pv_buffer_ypu.h  pv_cnn.h  pv_cnn_matmul.h  pv_cnn_transposed.h  pv_cnn_transposed_depthwise.h  pv_convnext.h  pv_convnext_film.h  pv_convnext_transposed.h  pv_embed.h  pv_layer_norm.h  pv_orca.h  pv_orca_duration_predictor.h  pv_orca_fft.h  pv_orca_flow.h  pv_orca_gaussian_upsampler.h  pv_orca_internal.h  pv_orca_istft.h  pv_orca_language_data.h  pv_orca_lfm_condition_fuser.h  pv_orca_lfm_film_generator.h  pv_orca_lfm_vf_estimator.h  pv_orca_lfm_vf_estimator_param.h  pv_orca_metric_internal.h  pv_orca_phonemizer.h  pv_orca_pqmf.h  pv_orca_prior_encoder_film_generator.h  pv_orca_prior_encoder_flow.h  pv_orca_stream_state.h  pv_orca_synthesizer.h  pv_orca_text_encoder.h  pv_orca_util.h  pv_orca_vocoder.h  pv_profiler.h  (+9 more)
lib/wasm/: pv_orca.js  pv_orca.wasm  pv_orca_pthread.js  pv_orca_pthread.wasm  pv_orca_simd.js  pv_orca_simd.wasm
peer/: hippo.cmake  model.cmake  normalizer.cmake  ypu.cmake  zoo-dev.cmake
platform/java/: build.gradle  settings.gradle
platform/node/: CMakeLists.txt  README.md  jest.config.js  package.json  pv_orca_napi.c
platform/node/test/: napi_test_utils.ts  pv_orca_napi.test.ts
res/: environment.json
res/core/: README.md  pv_language_info_de.json  (+7 more)
script/: _util.py  artifact_copy.py  cicd.py  clean_public_header.py  generate_pqmf_helper_data.py  istft.py  orca_symbols.py  relative_pcm_test.py  serialize_speaker_dictionary.py  time_to_first_audio_tests.py  update_models.py
src/: pv_adanorm.c  pv_additive_coupling.c  pv_affine.c  pv_attention.c  pv_buffer.c  pv_buffer_int32.c  pv_buffer_q510.c  pv_buffer_ypu.c  pv_cnn.c  pv_cnn_matmul.c  pv_cnn_transposed.c  pv_cnn_transposed_depthwise.c  pv_convnext.c  pv_convnext_film.c  pv_convnext_transposed.c  pv_embed.c  pv_layer_norm.c  pv_orca.c  pv_orca_duration_predictor.c  pv_orca_fft.c  pv_orca_flow.c  pv_orca_gaussian_upsampler.c  pv_orca_istft.c  pv_orca_lfm_condition_fuser.c  pv_orca_lfm_film_generator.c  pv_orca_lfm_vf_estimator.c  pv_orca_phonemizer.c  pv_orca_pqmf.c  pv_orca_prior_encoder_film_generator.c  pv_orca_prior_encoder_flow.c  pv_orca_stream_state.c  pv_orca_synthesizer.c  pv_orca_text_encoder.c  pv_orca_util.c  pv_orca_vocoder.c  pv_profiler.c  pv_residual_coupling.c  pv_rope_attention.c  pv_rope_ffn.c  pv_rope_transformer.c  (+5 more)
test/: README.md  pv_orca_metric.c  test_performance_pv_orca.c  test_pv_adanorm.c  test_pv_additive_coupling.c  test_pv_affine.c  test_pv_attention.c  test_pv_cnn.c  test_pv_convnext.c  test_pv_convnext_film.c  test_pv_embed.c  test_pv_gaussian_upsampler_attention.c  test_pv_layer_norm.c  test_pv_orca.c  test_pv_orca_dictionary.c  test_pv_orca_duration_predictor.c  test_pv_orca_flow.c  test_pv_orca_gaussian_upsampler.c  test_pv_orca_integration.c  test_pv_orca_istft.c  test_pv_orca_ja.c  test_pv_orca_lfm_film_generator.c  test_pv_orca_lfm_noise_prediction.c  test_pv_orca_metric.c  test_pv_orca_multilingual.c  test_pv_orca_phonemizer.c  test_pv_orca_prior_encoder_film_generator.c  test_pv_orca_prior_encoder_flow.c  test_pv_orca_synthesizer.c  test_pv_orca_text_encoder.c  test_pv_orca_util.c  test_pv_orca_vocoder.c  test_pv_residual_coupling.c  test_pv_rope_attention.c  test_pv_rope_ffn.c  test_pv_rope_transformer.c  test_pv_rope_transformer_film_conditioned.c  test_pv_transformer_ffn.c  test_pv_vocos_backbone.c
(+722 files in other folders)
